syntax = "proto3";

option csharp_namespace = "eShopLearning.WapAggregator.ApplicationGrpcRemoteServices.Protos";

service SkuInfoGrpc{
	rpc Search(SearchRequest) returns (stream SearchReply);
	rpc GetSkuBasikInfoAsId(GetSkuBasikInfoAsIdRequest) returns (GetSkuBasikInfoAsIdReply);
}

/** Search **/
message SearchRequest{
	string keyword = 1;
	int32 page = 2;
	int32 size = 3;
}
message SearchReply{
	string skuId =1;
	string image = 2;
	string title = 3;
	float price = 4;
}

/** GetSkuBasikInfoAsId **/
message GetSkuBasikInfoAsIdRequest{
	string skuId = 1;
}
message GetSkuBasikInfoAsIdReply{
	string title = 1;
	float price = 2;
	int32 inventory = 3;
	string image = 4;
	string skuAttrs = 5;
}